Correction décalage collapse list

--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -129,13 +129,13 @@
     
 }
 
-//classespour gérer la taille du composant collapse, utilisé avec la prop Size
-// .large{
-//     width: 1024px;
-// }
-// .medium{
-//     width: 582px;
-// }
-// .small{
-//     width: 335px;
-// }
+classespour gérer la taille du composant collapse, utilisé avec la prop Size
+.large{
+    width: 1024px;
+}
+.medium{
+    width: 582px;
+}
+.small{
+    width: 335px;
+}
